--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -3,16 +3,19 @@
 Nombre y título del trabajo
 ////
 = Pruebas de aceptación con Selenium
-Joaquín Cañadas <jjcanada@ual.es>, Francisco García <paco.garcia@ual.es>
+:navtitle: Introducción
 
-// Entrar en modo no numerado de apartados
-:numbered!: 
+Computación en la Nube, Servicios y Aplicaciones. Joaquín Cañadas <jjcanada@ual.es>, Francisco García <paco.garcia@ual.es>
+
+_Version_ *{page-component-display-version}*
+
+
 
 [abstract]
 ////
 COLOCA A CONTINUACIÓN EL RESUMEN
 ////
-Breve introducción a los tests de aceptación de aplicaciones web con Selenium.
+Introducción a los tests de aceptación de aplicaciones web con Selenium.
 
 ////
 COLOCA A CONTINUACIÓN LOS OBJETIVOS
@@ -24,6 +27,4 @@ COLOCA A CONTINUACIÓN LOS OBJETIVOS
 * Ejecutar los test de Selenium en Jenkins utilizando el navegador en modo _headless_.
 
 
-// Entrar en modo numerado de apartados
-:numbered:
 
