--- a/docs/modules/ROOT/pages/selenium-ide-intro.adoc
+++ b/docs/modules/ROOT/pages/selenium-ide-intro.adoc
@@ -1,57 +1,4 @@
-////
-Codificación, idioma, tabla de contenidos, tipo de documento
-////
-:encoding: utf-8
-:lang: es
-:toc: right
-:toc-title: Tabla de contenidos
-:keywords: Selenium end-to-end testing
-:doctype: book
-:icons: font
-
-////
-/// activar btn:
-////
-:experimental:
-
-:source-highlighter: rouge
-:rouge-linenums-mode: inline
-
-// :highlightjsdir: ./highlight
-
-:figure-caption: Fig.
-:imagesdir: images
-
-////
-Nombre y título del trabajo
-////
-= Pruebas de aceptación con Selenium
-
-Version 2.0, Marzo-2021.
-Joaquín Cañadas <jjcanada@ual.es>
-
-// Entrar en modo no numerado de apartados
-:numbered!: 
-
-[abstract]
-////
-COLOCA A CONTINUACIÓN EL RESUMEN
-////
-Breve introducción a los tests de aceptación de aplicaciones web con Selenium.
-
-////
-COLOCA A CONTINUACIÓN LOS OBJETIVOS
-////
-.Objetivos
-* Comenzar a crear tests de aceptación de aplicaciones web con Selenium IDE.
-* Crear y desplegar una plantilla de aplicación web que implemente un Login y Registro de usuario.
-* Exportar los test de Selenium IDE a Selenium Webdriver y ejecutar en Eclipse con distintos navegadores web (cross-browser testing). 
-* Ejecutar los test de Selenium en Jenkins utilizando el navegador en modo _headless_.
-
-
-// Entrar en modo numerado de apartados
-:numbered:
-
+= Comenzando con Selenium
 
 == Introducción a Selenium
 https://www.selenium.dev/[Selenium] es un conjunto de herramientas para llevar a cabo pruebas automatizadas de aplicaciones web.
