--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -5,7 +5,8 @@ Nombre y título del trabajo
 = Pruebas de aceptación con Selenium
 :navtitle: Introducción
 
-Computación en la Nube, Servicios y Aplicaciones. Joaquín Cañadas <jjcanada@ual.es>, Francisco García <paco.garcia@ual.es>
+Computación en la Nube, Servicios y Aplicaciones. 
+Joaquín Cañadas <jjcanada@ual.es>, Francisco García <paco.garcia@ual.es>
 
 _Version_ *{page-component-display-version}*
 
