--- a/docs/modules/ROOT/pages/selenium-jenkins.adoc
+++ b/docs/modules/ROOT/pages/selenium-jenkins.adoc
@@ -26,38 +26,84 @@ La ejecución de los tests de Selenium en Jenkins debe hacerse en modo _headless
 // Adaptación a CNSA: 
 // En HMIS Jenkins se instala  como paquete en Ubuntu. Hay que adaptar esto a Jenkins en contenedor de CNSA.
 
-. En la carpeta JENKINS_HOME (si no recuerdas cual es, la predeterminada es `/var/lib/jenkins`, puedes verla en http://fake[http://_mi-jenkins-url_/systemInfo]) crea una carpeta `selenium-drivers` y descarga ahí los drivers de los navegadores Firefox y Chrome para Ubuntu. Para ello, ejecuta los siguientes comandos en la máquina Jenkins.
+. En la carpeta JENKINS_HOME (si no recuerdas cual es, la predeterminada es `/var/jenkins_home`, puedes verla en http://fake[http://_mi-jenkins-url_/systemInfo]) crea una carpeta `selenium-drivers` y descarga ahí los drivers de los navegadores Firefox y Chrome para Ubuntu. Para ello, ejecuta los siguientes comandos en la máquina Jenkins.
 
 [source,bash]
 ----
+docker exec -it jenkins-docker bash <1>
 cd
-JENKINS_HOME=/var/lib/jenkins <1>
+JENKINS_HOME=/var/jenkins_home <2>
 echo $JENKINS_HOME
-mkdir $JENKINS_HOME/selenium-drivers <2>
+mkdir $JENKINS_HOME/selenium-drivers <3>
 wget https://github.com/mozilla/geckodriver/releases/download/v0.29.1/geckodriver-v0.29.1-linux64.tar.gz
-sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.29.1-linux64.tar.gz <3>
-wget https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_linux64.zip <4>
+sudo tar -C $JENKINS_HOME/selenium-drivers/ -xvf geckodriver-v0.29.1-linux64.tar.gz <4>
+wget https://chromedriver.storage.googleapis.com/90.0.4430.24/chromedriver_linux64.zip <5>
 sudo apt-get install unzip -y 
-sudo unzip chromedriver_linux64.zip -d $JENKINS_HOME/selenium-drivers/ <5>
-ls -la  $JENKINS_HOME/selenium-drivers/ <6>
-sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/ <7>
+sudo unzip chromedriver_linux64.zip -d $JENKINS_HOME/selenium-drivers/ <6>
+ls -la  $JENKINS_HOME/selenium-drivers/ <7>
+sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/ <8>
 sudo chown jenkins:jenkins $JENKINS_HOME/selenium-drivers/*
 ----
-<1> Declara la variable de entorno `JENKINS_HOME`
-<2> Crea la carpeta donde guardar los drivers de los navegadores. Asegúrate que tienes permisos suficientes. Si necesitas usar `sudo`, deberás de cambiar los permisos y grupos de los archivos al usuario `jenkins:jenkins` (ver paso 6).
-<3> Con `wget` descarga `geckodriver` para linux en la carpeta home, y con `tar -xvf` descomprime en la carpeta deseada.
-<4> Con `wget` descarga `chromedriver` para linux en la carpeta home, pero antes revisa la https://www.ubuntuupdates.org/package/google_chrome/stable/main/base/google-chrome-stable[última versión estable] de Chrome para Ubuntu y usa la https://chromedriver.chromium.org/downloads[URL de descarga] de `chromedriver_linux64.zip` adecuada para la versión estable de Chrome
-<5> Con `unzip` descomprime en la carpeta deseada. Además has tenido que instalar `unzip`
-<6> Lista los archivos en la carpeta `selenium-drivers`. Comprueba que los permisos no son adecuados para que Jenkins pueda lanzar los ejecutables de los drivers. 
-<7> Asigna el grupo `jenkins:jenkins` a la carpeta y los archivos. Como resultado los archivos deben tener los permisos correctos
+<1> Ejecuta una consola en tu contenedor jenkins-docker
+<2> Declara la variable de entorno `JENKINS_HOME`
+<3> Crea la carpeta donde guardar los drivers de los navegadores. Asegúrate que tienes permisos suficientes. Si necesitas usar `sudo`, deberás de cambiar los permisos y grupos de los archivos al usuario `jenkins:jenkins` (ver paso 7).
+<4> Con `wget` descarga `geckodriver` para linux en la carpeta home, y con `tar -xvf` descomprime en la carpeta deseada.
+<5> Con `wget` descarga `chromedriver` para linux en la carpeta home, pero antes revisa la https://www.ubuntuupdates.org/package/google_chrome/stable/main/base/google-chrome-stable[última versión estable] de Chrome para Ubuntu y usa la https://chromedriver.chromium.org/downloads[URL de descarga] de `chromedriver_linux64.zip` adecuada para la versión estable de Chrome
+<6> Con `unzip` descomprime en la carpeta deseada. Además has tenido que instalar `unzip`
+<7> Lista los archivos en la carpeta `selenium-drivers`. Comprueba que los permisos no son adecuados para que Jenkins pueda lanzar los ejecutables de los drivers. 
+<8> Asigna el grupo `jenkins:jenkins` a la carpeta y los archivos. Como resultado los archivos deben tener los permisos correctos
 
 .Permisos de los drivers
 image::jenkins-installed-selenium-drivers.png[role="thumb", align="center"]
 
 [start=2]
-. Instala `firefox` en tu máquina Jenkins. También deberás instalar `xvfb` que hace de http://elementalselenium.com/tips/38-headless[entorno de visualización simulado] para ejecutar los tests _headeless_ de Selenium. Recuerda que la maquina Jenkins no tiene una interfaz gráfica, así que aunque firefox se va a ejecutar en modo _headless_, es necesario tener un entorno de visualización simulado, y esto lo proporciona `xvfb`.
+. Instala `firefox` en tu contenedor Jenkins. También deberás instalar `xvfb` que hace de http://elementalselenium.com/tips/38-headless[entorno de visualización simulado] para ejecutar los tests _headeless_ de Selenium. Recuerda que la maquina Jenkins no tiene una interfaz gráfica, así que aunque firefox se va a ejecutar en modo _headless_, es necesario tener un entorno de visualización simulado, y esto lo proporciona `xvfb`.
+
+.Dockerfile
+[source, docker]
+----
+FROM jenkins/jenkins:lts
+
+USER root
+
+RUN apt-get update && \
+apt-get -y install apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg2 \
+    software-properties-common && \
+curl -fsSL https://download.docker.com/linux/$(. /etc/os-release; echo "$ID")/gpg > /tmp/dkey; apt-key add /tmp/dkey && \
+add-apt-repository \
+    "deb [arch=amd64] https://download.docker.com/linux/$(. /etc/os-release; echo "$ID") \
+    $(lsb_release -cs) \
+    stable" && \
+  apt-get update && \
+  apt-get -y install docker-ce
+
+RUN apt-get install -y docker-ce
+
+RUN usermod -a -G docker jenkins
+
+RUN apt-get -y install xvfb firefox <1>
+
+USER jenkins
+----
+<1> Añadimos la instalación de xvfb y firefox
+
+Construimos la imagen a partir del Dockerfile:
+
+[source,bash,subs="verbatim,quotes"]
+----
+docker build --tag *ualjjcanada*/jenkins-docker:1.0 . <1>
+----
+<1> Sustituye *ualjjcanada/* por tu usuario de Dockerhub si estás registrado, si no simplemente no lo pongas.
     
-    sudo apt-get install -y  xvfb firefox
+Reinicia el contenedor para aplicar los cambios:
+
+[source,bash,subs="verbatim,quotes"]
+----
+docker restart jenkins-docker
+----
 
 === Creación del pipeline en Jenkins
 
